# botcrit-ui

./: .gitignore  AGENTS.md  Cargo.toml  Justfile  RENDER_GLITCH.md  SPEC.md  design.md  design.txt
.agents/botbox/: groom.md
.agents/botbox/scripts/: analyze-theme-colors.py
.beads/: issues.jsonl
notes/: design.txt  modal-design.txt  sidebar-tree.txt
scripts/: generate-demo.sh  snapshot-test.sh  verify-theme-colors.sh
src/: cli_client.rs  command.rs  config.rs  db.rs  input.rs  layout.rs  lib.rs  main.rs  message.rs  model.rs  stream.rs  syntax.rs  text.rs  update.rs  vcs.rs
src/diff/: mod.rs  parse.rs
src/render_backend/: ftui_compat.rs  mod.rs
src/theme/: mod.rs
src/view/: command_palette.rs  comment_editor.rs  components.rs  diff.rs  mod.rs  review_detail.rs  review_list.rs
src/view/diff/: analysis.rs  comments.rs  context.rs  helpers.rs  mod.rs  side_by_side.rs  text_util.rs  unified.rs
tests/snapshots/: 01-review-list.txt  02-review-detail-unified.txt  03-review-detail-sbs.txt  04-review-detail-file2.txt  05-sidebar-focused.txt
themes/: ayu.json  catppuccin.json  default-dark.json  default-light.json  dracula.json  gruvbox.json  monokai.json  nord.json  solarized.json  vesper.json
