[package]
name = "botcrit-ui"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
description = "GitHub-style code review TUI for botcrit"
license = "MIT"

[[bin]]
name = "crit-ui"
path = "src/main.rs"

[dependencies]
# Rendering
opentui = { path = "../../repos/opentui_rust" }

# Database (direct access to botcrit's SQLite)
rusqlite = { version = "0.32", features = ["bundled"] }

# Core
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[lints.rust]
unsafe_code = "warn"

[lints.clippy]
all = "warn"
pedantic = "warn"
nursery = "warn"
