[package]
name = "botcrit-ui"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
description = "GitHub-style code review TUI for botcrit"
license = "MIT"

[[bin]]
name = "crit-ui"
path = "src/main.rs"

[dependencies]
# Rendering
opentui = { git = "https://github.com/Dicklesworthstone/opentui_rust", version = "0.1.0" }

# Core
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Syntax highlighting
syntect = { version = "5.3", default-features = false, features = ["default-fancy"] }

[lints.rust]
unsafe_code = "warn"

[lints.clippy]
all = "warn"
pedantic = "warn"
nursery = "warn"

# TODO: remove patch once https://github.com/Dicklesworthstone/opentui_rust/pull/3 is merged
[patch."https://github.com/Dicklesworthstone/opentui_rust"]
opentui = { git = "https://github.com/bobisme/opentui_rust", branch = "fix/present-force-cursor-home" }
