[package]
name = "botcrit-ui"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
description = "GitHub-style code review TUI for botcrit"
license = "MIT"

[[bin]]
name = "crit-ui"
path = "src/main.rs"

[features]
default = ["backend-ftui"]
backend-ftui = ["dep:ftui-core", "dep:ftui-render", "dep:ftui-style", "dep:palette"]
ftui-migration = ["backend-ftui"]

[dependencies]
# Rendering
ftui-core = { version = "0.2.1", features = ["crossterm"], optional = true }
ftui-render = { version = "0.2.1", optional = true }
ftui-style = { version = "0.2.1", optional = true }
palette = { version = "0.7.6", optional = true }

# Core
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Syntax highlighting
syntect = { version = "5.3", default-features = false, features = ["default-fancy"] }

[lints.rust]
unsafe_code = "warn"

[lints.clippy]
all = "warn"
pedantic = "warn"
nursery = "warn"
